--- a/2016-04-10/source/index.html
+++ b/2016-04-10/source/index.html
@@ -25,6 +25,7 @@
 			<a href="300x600.html" target="_blank">300x600</a>
 			<a href="300x50.html" target="_blank">300x50</a>
 			<a href="320x50.html" target="_blank">320x50</a>
+			<a href="728x90.html" target="_blank">728x90</a>
 		</div>
 	</body>
 </html>
