--- a/2016-04-22/source/english/300x50.html
+++ b/2016-04-22/source/english/300x50.html
@@ -43,7 +43,9 @@
 					</div>
 					<div class="cta-container container">
 						<div class="cta absolute">
-							<div class="cta-text absolute">&nbsp;</div>
+							<div class="cta-bg absolute">
+								<div class="cta-text absolute">&nbsp;</div>
+							</div>
 						</div>
 					</div>
 				</div>
