--- a/2016-05-11/source/MTL/ENG/300x250.html
+++ b/2016-05-11/source/MTL/ENG/300x250.html
@@ -32,7 +32,8 @@
 								</div>
 							</div>
 						</div>
-
+					</div>
+					<div class="car-2-container container">
 						<div class="car-2 absolute">
 							<div class="wheel-container container">
 								<div class="wheel-container-2 container">
@@ -46,6 +47,7 @@
 							</div>
 						</div>
 					</div>
+					
 					<div class="text-container container">
 						<div class="text absolute">&nbsp;</div>
 					</div>
