--- a/2016-08-11/source/320x50.html
+++ b/2016-08-11/source/320x50.html
@@ -21,8 +21,10 @@
 				<div class="text2-container container">
 					<div class="text2 absolute">&nbsp;</div>
 				</div>
-				<div class="cta-container container">
-					<div class="cta absolute">&nbsp;</div>
+				<div class="cta-wrapper container">
+					<div class="cta-container container">
+						<div class="cta absolute">&nbsp;</div>
+					</div>
 				</div>
 			</div>
 		</div>
