--- a/2016-09-03/source/300x250.html
+++ b/2016-09-03/source/300x250.html
@@ -22,22 +22,12 @@
 					<div class="bottle-all-container container">
 						<div class="bottle-all container">
 							<div class="bottle-wrapper container">
-								<div class="bottle1-container container">
-									<div class="bottle1 absolute">&nbsp;</div>
-								</div>
-								<div class="bottle2-container container">
-									<div class="bottle2 absolute">&nbsp;</div>
-								</div>
-								<div class="bottle3-container container">
-									<div class="bottle3 absolute">&nbsp;</div>
-								</div>
-								<div class="bottle4-container container">
-									<div class="bottle4 absolute">&nbsp;</div>
-								</div>
+								<div class="bottle1 absolute">&nbsp;</div>
+								<div class="bottle2 absolute">&nbsp;</div>
+								<div class="bottle3 absolute">&nbsp;</div>
+								<div class="bottle4 absolute">&nbsp;</div>
 							</div>
-							<div class="bottle5-container container">
-								<div class="bottle5 absolute">&nbsp;</div>
-							</div>
+							<div class="bottle5 absolute">&nbsp;</div>
 						</div>
 					</div>
 					<div class="bottle-alone absolute">&nbsp;</div>
@@ -57,6 +47,7 @@
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
+					<div class="border container">&nbsp;</div>
 				</div>
 		</div>
 	</body>
