--- a/2016-09-03/source/300x600.html
+++ b/2016-09-03/source/300x600.html
@@ -45,7 +45,7 @@
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
-
+					<div class="border container">&nbsp;</div>
 				</div>
 		</div>
 	</body>
