--- a/2016-09-03/source/728x90.html
+++ b/2016-09-03/source/728x90.html
@@ -54,7 +54,7 @@
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
-
+					<div class="border container">&nbsp;</div>
 				</div>
 		</div>
 	</body>
