--- a/2016-09-09/source/728x90.html
+++ b/2016-09-09/source/728x90.html
@@ -12,9 +12,18 @@
 		<div class="banner-container container">
 				<div class="content container">
 					
-					<div class="logo absolute">&nbsp;</div>
-					<div class="title-container container">
-						<div class="title absolute">&nbsp;</div>
+					<div class="header absolute">&nbsp;</div>
+					<div class="logo1-container container">
+						<div class="logo1 absolute">&nbsp;</div>
+					</div>
+					<div class="logo2-container container">
+						<div class="logo2 absolute">&nbsp;</div>
+					</div>
+					<div class="logo3-container container">
+						<div class="logo3 absolute">&nbsp;</div>
+					</div>
+					<div class="logo4-container container">
+						<div class="logo4 absolute">&nbsp;</div>
 					</div>
 					<div class="bottle-all-container container">
 						<div class="bottle-all container">
